--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -62,7 +62,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          platforms: linux/amd64, linux/arm64
+          platforms: linux/amd64
           context: ./Docker/${{matrix.os.dir}}
           file: ./Docker/${{matrix.os.dir}}/Dockerfile-externals
           build-args: |
